# ebv_frame_recording

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
include/: cached_timeline_slider.h  event_camera_manager.h  frame_camera_manager.h  player_window.h  recording_buffer.h  recording_data_loader.h  recording_loader.h  recording_manager.h  utils.h  utils_qt.h
src/: cached_timeline_slider.cpp  ebv_frame_recording.cpp  event_camera_manager.cpp  extract_frame_index.cpp  frame_camera_manager.cpp  main.cpp  player_window.cpp  recording_buffer.cpp  recording_data_loader.cpp  recording_loader.cpp  recording_manager.cpp  utils.cpp  utils_qt.cpp  video_player.cpp  video_player_mockup.cpp
tests/: CMakeLists.txt  gtest_registration_shim.cpp  test_cvMatToQImage.cpp  test_event_bias.cpp  test_event_camera_loader_stub.cpp  test_extract_frame_index.cpp  test_recording_buffer.cpp  test_recording_buffer_extended.cpp  test_recording_loader.cpp  test_recording_loader_framesort.cpp  test_recording_manager_advanced.cpp  test_recording_manager_config.cpp  test_recording_manager_output_dir.cpp  test_recording_paths.cpp  test_sanity.cpp
tests/mocks/: mock_camera_managers.h
